[project]
name = "pyblackbird"
version = "0.7.0"
authors = [
  { name = "Ben Kools", email="koolsb@my.uwstout.edu" },
]
description = "Python API for talking to Monoprice Blackbird 4k 8x8 HDBaseT Matrix"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
"Homepage" = "https://github.com/koolsb/pyblackbird"
"Bug Tracker" = "https://github.com/koolsb/pyblackbird/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
